--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </section>
       <!-- Benefit section -->
       <section>
+        <h2 hidden>Our advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
